templates/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    email: clouddot-security@redhat.com
  resourceVersion: '539555804'
  name: iifybot
  namespace: iifybot
  labels:
    owner: platform-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iifybot
  template:
    metadata:
      labels:
        app: iifybot
    spec:
      containers:
        - name: iifybot
          image: 'quay.io/caswilli_insights/iifybot:24d263c'
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
